logs/allink-essentials.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/allink_essentials'...
Listing './lib/python3.5/site-packages/allink_essentials/analytics'...
Listing './lib/python3.5/site-packages/allink_essentials/analytics/templates'...
Listing './lib/python3.5/site-packages/allink_essentials/analytics/templates/analytics'...
Listing './lib/python3.5/site-packages/allink_essentials/analytics/templatetags'...
Listing './lib/python3.5/site-packages/allink_essentials/fabfiles'...
Compiling './lib/python3.5/site-packages/allink_essentials/fabfiles/nexa3_class_fabfile.py'...
***   File "./lib/python3.5/site-packages/allink_essentials/fabfiles/nexa3_class_fabfile.py", line 67
    print magenta("Cloning Repository")
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/allink_essentials/fabfiles/nexa_class_fabfile.py'...
***   File "./lib/python3.5/site-packages/allink_essentials/fabfiles/nexa_class_fabfile.py", line 67
    print magenta("Cloning Repository")
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/allink_essentials/fabfiles/pestalozzi_class_fabfile.py'...
***   File "./lib/python3.5/site-packages/allink_essentials/fabfiles/pestalozzi_class_fabfile.py", line 41
    print magenta("Cloning Repository")
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/allink_essentials/fabfiles/proxima_class_fabfile.py'...
***   File "./lib/python3.5/site-packages/allink_essentials/fabfiles/proxima_class_fabfile.py", line 41
    print magenta("Cloning Repository")
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/allink_essentials/feincms_extensions'...
Listing './lib/python3.5/site-packages/allink_essentials/in_footer'...
Listing './lib/python3.5/site-packages/allink_essentials/in_footer/templatetags'...
Listing './lib/python3.5/site-packages/allink_essentials/legacy_redirect'...
Listing './lib/python3.5/site-packages/allink_essentials/legacy_redirect/migrations'...
Listing './lib/python3.5/site-packages/allink_essentials/locale'...
Listing './lib/python3.5/site-packages/allink_essentials/locale/de'...
Listing './lib/python3.5/site-packages/allink_essentials/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/allink_essentials/logging'...
Listing './lib/python3.5/site-packages/allink_essentials/mailchimp_api'...
Compiling './lib/python3.5/site-packages/allink_essentials/mailchimp_api/config.py'...
***   File "./lib/python3.5/site-packages/allink_essentials/mailchimp_api/config.py", line 13
    print "This doesn't look like an API Key: " + apikey
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/allink_essentials/mailchimp_api/templates'...
Listing './lib/python3.5/site-packages/allink_essentials/mailchimp_api/templates/mailchimp_api'...
Listing './lib/python3.5/site-packages/allink_essentials/middleware'...
Listing './lib/python3.5/site-packages/allink_essentials/mixins'...
Listing './lib/python3.5/site-packages/allink_essentials/search'...
Listing './lib/python3.5/site-packages/allink_essentials/storage'...
Listing './lib/python3.5/site-packages/allink_essentials/view'...
Listing './lib/python3.5/site-packages/allink_essentials/view/v2'...
Listing './lib/python3.5/site-packages/allink_essentials-1.1.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
